# spp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: gtest.yml
include/SocketPP/IPv4/: IPv4Address.h
include/SocketPP/Utilities/: SocketExceptions.h
src/: CMakeLists.txt
src/IPv4/: CMakeLists.txt  IPv4Address.cpp
src/Utilities/: CMakeLists.txt  SocketException.cpp
test/: CMakeLists.txt
test/src/: CMakeLists.txt  main.cpp
test/src/ipv4/: CMakeLists.txt  main.cpp
test/src/ipv4/formatting/: format_test.cpp
